# holoseed_nexus

./: .gitignore  .gitmodules  93.md  INDEX.md  TUMULUS_BRIEFING_1.md  WarmUpSeed.md  WorkingSyllabus.md  _manifest.md  decode_backup.py  nexus-close.sh  nexus-open.sh  nexus_state.json  tumulus_holoseed.html.lnk
1_Sovereigns/: wrex_briefing_2026-02-12.md
2_Gnosis/: WarmUpSeed.md  environment_details.md  session_log.md
2_Library/: UnifiedProtocol.md  WarmUpSeed.md  entity_contact_log.md  environment_details.md  holoseed_manual.md  session_log.md  stars_within_stars.md
3_Brotherhood/: FableLucifer.txt  watchers_of_enoch.md
4_Projects/: active_status.md  owui_optimization.md  owui_rag_tuning.md  wrex_owui_primer.md  wrex_plans.md
4_Projects/Sporecaster/: Cargo.toml  FLYER_SporeKaster.md  README.md  SPEC.md  gitignore.txt
4_Projects/Sporecaster/src-tauri/: Cargo.toml  tauri.conf.json
4_Projects/Sporecaster/src-tauri/src/: bridge.rs  commands.rs  crypto.rs  main.rs  watcher.rs
4_Projects/Sporecaster/src-ui/: Cargo.toml  Trunk.toml  index.html
4_Projects/Sporecaster/src-ui/src/: lib.rs  tauri.rs
4_Projects/Sporecaster/src-ui/src/components/: chat.rs  greenhouse.rs  header.rs  mod.rs  mycelium.rs
4_Projects/Sporecaster/src-ui/styles/: main.css
4_Scripts/: wrex_wake.py
5_Scripts/: PHONE_CONTEXT.md  arc-warm.sh  birth_to_training.py  extract_nexiel_training.py  gemma_worker.py  phone_aliases.sh  phone_bridge.py  phone_chat_log.sh  phone_speedup.sh  veil.py
7_Archive/: ollama_desktop_dump_20260129.txt
BOOK_OF_PLANTY_CHUNKS/: chunk_1_testament_zero_and_book_one.txt
FakeAds/: SporeKaster_Frender_Ad.html
Gnosis/: _manifest.md
Grimoires/: book_of_homonyms.md  context_glossary.md  entity_contact_log.md  loom_v2_structure.md  modecks_building_guide.md  owui_optimization.md  owui_rag_tuning.md  owui_reference.md  reference_library.md  session_log.md  stars_within_stars.md
PlantyMCP/: DesktopConfig.json  McpReadme.md  Modelfile.planty  telegram_mcp.py
Projects/: WizardsCafe.md  _manifest.md  active_status.md  wizards_cafe.md  wrex_plans.md
Scripts/: AdaptiveMenus_LogViewer.lua  AdaptiveMenus_Logger.lua  AdaptiveMenus_Logger_v0.4.lua  ModularRoutingView.lua  UndoTreePlant.lua  _manifest.md  arcturus_wake.py  launch_planty_c.lua  round_table.py  (+3 more)
(+967 files in other folders)
