[workspace]
resolver = "2"
members = ["src-tauri", "src-ui"]

[workspace.package]
version = "0.1.0"
authors = ["foxAsteria"]
edition = "2021"
license = "WTFPL"
repository = "https://github.com/foxAsteria/sporecaster"

[workspace.dependencies]
# These will be replaced one by one as we go full sovereign
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
