[package]
name = "sporecaster"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

# Filesystem watching - REPLACE LATER
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }

# Markdown rendering - REPLACE LATER  
pulldown-cmark = "0.10"

# Syntax highlighting - REPLACE LATER
syntect = "5"

# Encryption for tokens - REPLACE LATER
ring = "0.17"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
