[package]
name = "sporecaster-ui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }

# Tauri interop
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "console",
] }

# Serialization
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"

# Console logging in WASM
console_error_panic_hook = "0.1"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
